@@ -2,7 +2,7 @@
  * Copyright (c) 2012, Marc Röttig.
  *
  * This file is part of GenericKnimeNodes.
- * 
+ *
  * GenericKnimeNodes is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
@@ -21,7 +21,11 @@ package com.genericworkflownodes.knime.nodes.io.listimporter;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.InvalidPathException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -33,24 +37,30 @@ import org.knime.core.node.CanceledExecutionException;
 import org.knime.core.node.ExecutionContext;
 import org.knime.core.node.ExecutionMonitor;
 import org.knime.core.node.InvalidSettingsException;
+import org.knime.core.node.NodeLogger;
 import org.knime.core.node.NodeModel;
 import org.knime.core.node.NodeSettingsRO;
 import org.knime.core.node.NodeSettingsWO;
+import org.knime.core.node.defaultnodesettings.SettingsModelBoolean;
 import org.knime.core.node.defaultnodesettings.SettingsModelOptionalString;
 import org.knime.core.node.defaultnodesettings.SettingsModelStringArray;
 import org.knime.core.node.port.PortObject;
 import org.knime.core.node.port.PortObjectSpec;
 import org.knime.core.node.port.PortType;
+import org.knime.core.util.FileUtil;
 
 import com.genericworkflownodes.util.MIMETypeHelper;
 
 /**
  * This is the model implementation of ListMimeFileImporter.
- * 
+ *
  * @author roettig, aiche
  */
 public class ListMimeFileImporterNodeModel extends NodeModel {
 
+    private static final NodeLogger LOGGER = NodeLogger
+            .getLogger(ListMimeFileImporterNodeModel.class);
+    
     /**
      * ID for the filename configuration.
      */
@@ -59,6 +69,11 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
      * Config name for file extension.
      */
     static final String CFG_FILE_EXTENSION = "FILE_EXTENSION";
+
+    /**
+     * Config name for the option to resolve all paths relative to the workflow.
+     */
+    static final String CFG_RESOLVE_WORKFLOW_RELATIVE = "RESOLVE_WORKFLOW";
 
     /**
      * Model containing the file names and optional extension.
@@ -70,6 +85,8 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
      */
     private SettingsModelOptionalString m_file_extension = new SettingsModelOptionalString(
             CFG_FILE_EXTENSION, "", false);
+
+    private SettingsModelBoolean m_resolveWorkflowRel = new SettingsModelBoolean(CFG_RESOLVE_WORKFLOW_RELATIVE, false);
 
     /**
      * Constructor for the node model.
@@ -92,6 +109,7 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
     protected void saveSettingsTo(final NodeSettingsWO settings) {
         m_filenames.saveSettingsTo(settings);
         m_file_extension.saveSettingsTo(settings);
+        m_resolveWorkflowRel.saveSettingsTo(settings);
     }
 
     /**
@@ -102,6 +120,11 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
             throws InvalidSettingsException {
         m_filenames.loadSettingsFrom(settings);
         m_file_extension.loadSettingsFrom(settings);
+
+        // This is a new feature so we have to check if the key exists
+        if (settings.containsKey(CFG_RESOLVE_WORKFLOW_RELATIVE)) {
+            m_resolveWorkflowRel.loadSettingsFrom(settings);
+        }
     }
 
     /**
@@ -110,6 +133,11 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
     @Override
     protected void validateSettings(final NodeSettingsRO settings)
             throws InvalidSettingsException {
+
+        // This is a new feature so we have to check if the key exists
+        if (settings.containsKey(CFG_RESOLVE_WORKFLOW_RELATIVE)) {
+            m_resolveWorkflowRel.validateSettings(settings);
+        }
 
         SettingsModelStringArray tmp_filenames = m_filenames
                 .createCloneWithValidatedValue(settings);
@@ -136,7 +164,7 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
             List<String> mts = new ArrayList<String>();
             String mt = null;
             for (String filename : tmp_filenames.getStringArrayValue()) {
-                mt = MIMETypeHelper.getMIMEtype(filename);
+                mt = MIMETypeHelper.getMIMEtype(filename).orElse(null);
                 if (mt == null) {
                     throw new InvalidSettingsException(
                             "Files of unknown MIMEtype selected: " + filename);
@@ -184,14 +212,37 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
             throw new InvalidSettingsException("No Files selected.");
         }
 
+        if (m_resolveWorkflowRel.getBooleanValue()) {
+            String[] newFilenames = new String[filenames.length];
+            Path localPath;
+            try {
+                URL url = FileUtil.toURL("knime://knime.workflow/");
+                localPath = FileUtil.resolveToPath(url);
+            } catch (IOException | InvalidPathException | URISyntaxException e) {
+                throw new InvalidSettingsException("Cannot resolve KNIME workflow URL", e);
+            }
+            for (int i = 0; i < filenames.length; i++) {
+                Path relative = localPath.relativize(Paths.get(filenames[i]));
+                newFilenames[i] = "knime://knime.workflow/" + relative.toString();
+            }
+            m_filenames.setStringArrayValue(newFilenames);
+        }
+
         URIPortObjectSpec uri_spec = null;
 
         if (m_file_extension.isActive()) {
             uri_spec = new URIPortObjectSpec(m_file_extension.getStringValue());
         } else {
-            uri_spec = new URIPortObjectSpec(
-                    MIMETypeHelper.getMIMEtypeExtension(m_filenames
-                            .getStringArrayValue()[0]));
+            String ref_filename = m_filenames
+                    .getStringArrayValue()[0];
+            String ext = MIMETypeHelper.getMIMEtypeExtension(ref_filename).orElse(null);
+            if (ext == null){
+                ext = ref_filename.substring(ref_filename.indexOf('.'),ref_filename.length());
+                LOGGER.warn("MIMEType not registered for extension '" + ext + "'. Proceeding, but this might lead to problems connecting to the affected FileStoreURIPort.");
+                
+            }
+            uri_spec = new URIPortObjectSpec(ref_filename, ext);
+                    
         }
 
         return new PortObjectSpec[] { uri_spec };
@@ -211,10 +262,14 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
                         + in.getAbsolutePath());
             }
 
-            uris.add(new URIContent(in.toURI(),
+            //TODO URIContent could throw NUllPointerException if mimetype could not be looked up.
+            // Since we check during configure, this is minor, but there should be a more general solution
+            
+            // FileUtil.toURL(filename) should not throw anymore because it was already called in convertToURL(filename)
+            uris.add(new URIContent(FileUtil.toURL(filename).toURI(),
                     (m_file_extension.isActive() ? m_file_extension
                             .getStringValue() : MIMETypeHelper
-                            .getMIMEtypeExtension(filename))));
+                            .getMIMEtypeExtension(filename).orElse(null))));
         }
 
         return new PortObject[] { new URIPortObject(uris) };
@@ -223,7 +278,7 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
     /**
      * Extract a URL from the given String, trying different conversion
      * approaches. Inspired by CSVReaderConfig#loadSettingsInModel().
-     * 
+     *
      * @param urlS
      *            The string containing the URL.
      * @return A URL object.
@@ -237,7 +292,7 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
             throw new InvalidSettingsException("URL must not be null");
         }
         try {
-            url = new URL(urlS);
+            url = FileUtil.resolveToPath(FileUtil.toURL(urlS)).toUri().toURL();
         } catch (MalformedURLException e) {
             // might be a file, bug fix 3477
             File file = new File(urlS);
@@ -247,6 +302,9 @@ public class ListMimeFileImporterNodeModel extends NodeModel {
                 throw new InvalidSettingsException("Invalid URL: "
                         + e.getMessage(), e);
             }
+        } catch (IOException | URISyntaxException e) {
+            throw new InvalidSettingsException("Invalid URL: "
+                    + e.getMessage(), e);
         }
 
         return url;
